syntax = "proto3";

package cloudnotes.proto;

option java_multiple_files = true;
option java_package = "cloudnotes.proto";
option java_outer_classname = "AdminPortalProto";

service AdminPortal {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}